# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\BusinessController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
@@ -12,6 +13,16 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('/logout', [AuthController::class, 'logout']);
         Route::get('/user', [AuthController::class, 'user']);
+
+        Route::prefix('businesses')->group(function () {
+            Route::get('/show', [BusinessController::class, 'index']);
+            Route::post('/store', [BusinessController::class, 'store']);
+            Route::post('/{business}', [BusinessController::class, 'update']);
+
+        });
+
+
+
     });
 
     Route::get('/import-products', [\App\Http\Controllers\ArioController::class, 'import']);
@@ -20,6 +31,9 @@ Route::prefix('v1')->group(function () {
     Route::middleware(['role:ROLE_ADMIN'])->group(function () {
         Route::get('/users', [AuthController::class, 'getAllUsers']);
     });
+
+
+
 
 });
 
